# tophash

./: .gitignore  LICENSE  README.md  pyproject.toml  worklog.md
data/: top100_analysis.json
data/ai_supply_chain/: graphs.pkl
data/benchmarks/: full_benchmark_results.json  tudataset_canon_omega.json  tudataset_classification.json
data/cybersecurity/: graphs.pkl
data/data_infrastructure/: graphs.pkl
data/drug_discovery/: graphs.pkl
data/financial_fraud/: graphs.pkl
download/: accelerator_applications.md  pypi_publish_guide.md  top100_pypi_report.md
download/slides/: global.css  slide_01.html  slide_02.html  slide_03.html  slide_04.html  slide_05.html  slide_06.html  slide_07.html  slide_08.html  slide_09.html  slide_10.html  slide_11.html  slide_12.html  slide_13.html  slide_14.html  slide_15.html  slide_16.html  slides_brief.json
papers/tophash_workshop/: tophash_workshop.tex
scripts/: fetch_datasets.py  fetch_tudataset.py  generate_charts.py  generate_report.py  run_benchmarks.py  smoke_test.py  test_determinism.py  top100_analysis.py  top100_charts.py  tophash_memo.py
tool-results/: bash_1783192093635_17f0a06f2e77.txt  read_1783192086196_eed920d9007f.txt  read_1783192089940_c63eb8dd6935.txt
tophash/: __init__.py  canon.py  core.py  counterfactual.py  distance.py  ensemble.py  geometry.py  persistence.py  spectral.py  weighting.py
upload/: TopHash_Exactification_Technical_Specification.docx  TopHash_Omega_Infinity_Full_Stack_Specification.docx  TopHash_v3_Architecture_and_Technical_Specification.docx
